<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user_detail_page.UserDetailFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_profile_bg"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:backgroundTint="#24292F"
            app:cardBackgroundColor="#FFFFFF"
            app:cardElevation="10dp">

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="20dp"
                android:src="@drawable/baseline_favorite"
                android:contentDescription="@null" />
        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginStart="160dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/sahsenvar"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="50dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_go_profile_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="start"
                android:text="@string/bio"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tv_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxHeight="200dp"
                    android:minHeight="100dp"
                    android:text="@string/about_my_biographia" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:text="@string/statistics"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_height="wrap_content">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:columnCount="3"
                    android:rowCount="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/follower"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/following"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:text="@string/repos"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_follower_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:textSize="34sp"
                        android:textStyle="normal"
                        tools:text="5" />

                    <TextView
                        android:id="@+id/tv_following_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:textSize="34sp"
                        android:textStyle="normal"
                        tools:text="10" />

                    <TextView
                        android:id="@+id/tv_repo_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:textSize="34sp"
                        android:textStyle="normal"
                        tools:text="15" />
                </GridLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_profile_link"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="#0266d6"
            android:text="@string/go_to_profile"
            android:textColor="@color/cardview_light_background"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="100dp"
            app:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        app:cardElevation="10dp">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:elevation="10dp"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@null" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="110dp"
        android:text="@string/user"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp" />


</FrameLayout>